--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+   "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "homepage": "link-to-your-repository"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
