--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clicky-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/trozio/Clicky-game'",
+  "homepage": "https://github.com/trozio/Clicky-game",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
